<resources>
    <string name="app_name">E Music</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logo_text">E-Music</string>
    <string name="music_for_everyone_text">Music for everyone</string>
    <string name="email_username_text">Email or username</string>
    <string name="password_text">Password</string>
    <string name="remember_me_text">Remember Me</string>
    <string name="login_text">LOG IN</string>
    <string name="or_text">OR</string>
    <string name="login_google_text">LOG IN WITH GOOGLE</string>
    <string name="dont_have_account_text">DON\'T HAVE AN ACCOUNT?</string>
    <string name="signup_text"><u>SIGN UP</u></string>
    <string name="reset_password_text"><u>RESET PASSWORD</u></string>
    <string name="create_account_text">Create New Account</string>
    <string name="email_question_text">What\'s your email?</string>
    <string name="detail_email_text">You\'ll need to confirm this email later.</string>
    <string name="create_password_text">Create a password</string>
    <string name="detail_password_text">Use at least 8 characters.</string>
    <string name="create_text">CREATE</string>
    <string name="reset_password_normal_text">Reset Password</string>
    <string name="email_text">Email</string>
    <string name="detail_new_password_text">You\'ll get link to create new password in this email later.</string>
    <string name="send_text">SEND</string>
    <string name="my_library_text">My Library</string>
    <string name="profile_name_text">Jessica Hamilton</string>
    <string name="email_name_text">exampleName@gmail.com</string>
    <string name="edit_profile_text"><u>Edit Profile</u></string>
    <string name="playlist_text">Playlist</string>
    <string name="detail_playlist_text">3 Playlists</string>
    <string name="album_text">Album</string>
    <string name="detail_album_text">2 Albums</string>
    <string name="music_text">Music</string>
    <string name="detail_music_text">70 Liked Musics</string>
    <string name="artist_text">Artist</string>
    <string name="detail_artist_text">5 Following</string>
    <string name="logout_text">Log out</string>
    <string name="my_album_text">My Album</string>
    <string name="title_album_text">Love Yourself</string>
    <string name="artist_name_text">Kim So Young</string>
    <string name="my_artist_text">My Artist</string>
    <string name="my_playlist_text">Playing Now</string>
    <string name="create_playlist_text">Create Playlist</string>
    <string name="title_song_text">Used To Love (with Dean Lewis)</string>
    <string name="begin_time_text">00:00</string>
    <string name="end_time_text">03:55</string>
    <string name="edit_my_profile_text">Edit My Profile</string>
    <string name="old_password_text">Old password</string>
    <string name="create_new_password_text">Create a new password</string>
    <string name="name_text">Name</string>
    <string name="date_of_birth_title_text">Date of Birth</string>
    <string name="date_of_birth_text">Day/Month/Year</string>
    <string name="cancel_text">CANCEL</string>
    <string name="save_text">SAVE</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_music_text">My Music</string>
    <string name="following_text">FOLLOWING</string>
    <string name="shuffleplay_text">SHUFFLE PLAY</string>
    <string name="playlist_capital_text">PLAYLISTS</string>
    <string name="number_text">0</string>
    <string name="public_playlists_text">Public Playlists</string>
    <string name="albums_text">Albums</string>
    <string name="followers_text">FOLLOWERS</string>
    <string name="numbers_followers_text">25,582,381 FOLLOWERS</string>
    <string name="recently_played_text">Recently Played</string>
    <string name="recommended_playlist_text">Recommended Playlist</string>
    <string name="new_release_text">New Release From Artist</string>
    <string name="country_text">Country</string>
</resources>