<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:clickable="true"
    android:focusable="true">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_music"/>

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_music_for_everyone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/music_for_everyone_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        app:hintEnabled="false"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_email"
        app:endIconTint="@color/bright_gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:hint="@string/email_username_text"
            android:textColorHint="@color/bright_gray"
            app:expandedHintEnabled="true"
            android:textColor="@color/white"
            android:background="@color/dark_gray"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="1"
        app:hintEnabled="false"
        app:hintTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/bright_gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/password_text"
            android:textColorHint="@color/bright_gray"
            android:background="@color/dark_gray"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/remember_me_text"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_color_primary"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:gravity="center"
        android:text="@string/or_text"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/buttonLoginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="6dp"
        android:paddingBottom="7dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login_google_text"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_google_icon"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"/>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/dont_have_account_text"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signup_text"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset_password_text"
        android:textColor="@color/white"/>
</LinearLayout>