<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="@dimen/fragment_vertical_padding"
    android:paddingRight="30dp"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.login.ResetPassword">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

        <TextView
            android:id="@+id/tv_title_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password_normal_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/addEmailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/email_question_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        app:hintEnabled="false"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_email"
        app:endIconTint="@color/bright_gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:hint="@string/email_username_text"
            android:textColorHint="@color/bright_gray"
            app:expandedHintEnabled="true"
            android:textColor="@color/white"
            android:background="@color/dark_gray"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_detail_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/detail_new_password_text"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textColor="@color/bright_gray" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/send_text"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_color_primary"/>
</LinearLayout>