<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingTop="@dimen/fragment_vertical_padding"
        android:paddingRight="@dimen/fragment_horizontal_padding"
        android:paddingBottom="@dimen/fragment_vertical_padding"
        android:orientation="horizontal"
        android:background="@color/dark_gray">

        <ImageView
            android:id="@+id/img_back_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

        <TextView
            android:id="@+id/tv_edit_my_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/edit_my_profile_text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                app:hintEnabled="false"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_email"
                app:endIconTint="@color/bright_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_email_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:hint="@string/email_username_text"
                    android:textColorHint="@color/bright_gray"
                    app:expandedHintEnabled="true"
                    android:textColor="@color/white"
                    android:background="@color/dark_gray"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_detail_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/detail_email_text"
                android:textStyle="bold"
                android:textColor="@color/bright_gray" />

            <TextView
                android:id="@+id/tv_old_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/old_password_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                app:hintEnabled="false"
                app:hintTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/bright_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:hint="@string/password_text"
                    android:textColorHint="@color/bright_gray"
                    android:background="@color/dark_gray"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_create_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/create_new_password_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_create_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                app:hintEnabled="false"
                app:hintTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/bright_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_create_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:hint="@string/password_text"
                    android:textColorHint="@color/bright_gray"
                    android:background="@color/dark_gray"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_detail_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/detail_password_text"
                android:textStyle="bold"
                android:textColor="@color/bright_gray" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/name_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:hintEnabled="false"
                app:hintTextColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@color/dark_gray"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/cancel_text"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/dark_gray"/>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/save_text"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/theme_color_primary"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>