<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="@dimen/fragment_vertical_padding"
    android:paddingRight="30dp"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.component.UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <ToggleButton
            android:id="@+id/btn_following"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="225dp"
            android:textOff="FOLLOW"
            android:textOn="FOLLOWING"
            android:textSize="12dp"
            android:textColor="@color/bright_gray"
            android:background="@drawable/bck_soft_square"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:layout_marginBottom="50dp"
                android:text="@string/artist_name_text"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:id="@+id/tv_number_followers_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbers_followers_text"
                    android:textColor="@color/up_bright_gray"/>
            </LinearLayout>

            <android.widget.Button
                android:id="@+id/btn_shuffleplay"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/shuffleplay_text"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/theme_color_primary"
                android:layout_gravity="center"
                android:background="@drawable/bck_sausage"
                />

            <TextView
                android:id="@+id/tv_albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/albums_text"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_item_album_artist"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_musicalbum_list" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>